// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSelect should render correctly 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with "className" attribute 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select test"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with "docked" attribute 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select bpk-select--docked"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with "dockedFirst" attribute 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select bpk-select--docked-first"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      tomatos
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with "dockedLast" attribute 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select bpk-select--docked-last"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with "dockedMiddle" attribute 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select bpk-select--docked-middle"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with "large" attribute 1`] = `
<DocumentFragment>
  <select
    aria-invalid="false"
    class="bpk-select bpk-select--large"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with a "valid" attribute equal to false 1`] = `
<DocumentFragment>
  <select
    aria-invalid="true"
    class="bpk-select bpk-select--invalid"
    id="fruits"
    name="fruits"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled=""
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with image 1`] = `
<DocumentFragment>
  <div
    class="bpk-select-wrapper"
  >
    <img
      alt="placeholder"
      aria-hidden="true"
      class="bpk-select-wrapper__image image-class-name"
      src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E"
    />
    <select
      aria-invalid="false"
      class="bpk-select bpk-select--with-image"
      id="fruits"
      name="fruits"
    >
      <option
        value="apples"
      >
        Apples
      </option>
      <option
        value="oranges"
      >
        Oranges
      </option>
      <option
        value="pears"
      >
        Pears
      </option>
      <option
        disabled=""
        value="tomatoes"
      >
        Tomatoes
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with image and "disabled" property 1`] = `
<DocumentFragment>
  <div
    class="bpk-select-wrapper wrapperClass--test"
  >
    <img
      alt="placeholder"
      aria-hidden="true"
      class="bpk-select-wrapper__image bpk-select-wrapper__image--disabled image-class-name"
      src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E"
    />
    <select
      aria-invalid="false"
      class="bpk-select bpk-select--with-image"
      disabled=""
      id="fruits"
      name="fruits"
    >
      <option
        value="apples"
      >
        Apples
      </option>
      <option
        value="oranges"
      >
        Oranges
      </option>
      <option
        value="pears"
      >
        Pears
      </option>
      <option
        disabled=""
        value="tomatoes"
      >
        Tomatoes
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`BpkSelect should render correctly with image and custom classes 1`] = `
<DocumentFragment>
  <div
    class="bpk-select-wrapper wrapperClass--test"
  >
    <img
      alt="placeholder"
      aria-hidden="true"
      class="bpk-select-wrapper__image image-class-name"
      src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E"
    />
    <select
      aria-invalid="false"
      class="bpk-select bpk-select--with-image"
      id="fruits"
      name="fruits"
    >
      <option
        value="apples"
      >
        Apples
      </option>
      <option
        value="oranges"
      >
        Oranges
      </option>
      <option
        value="pears"
      >
        Pears
      </option>
      <option
        disabled=""
        value="tomatoes"
      >
        Tomatoes
      </option>
    </select>
  </div>
</DocumentFragment>
`;
